fix messenger display on mobile

--- a/app/assets/stylesheets/application_layout.css.scss
+++ b/app/assets/stylesheets/application_layout.css.scss
@@ -10,6 +10,12 @@ body {
   height: 100vh;
 }
 
+@media screen and (max-width: 768px) {
+    .fb_dialog {
+        bottom: 36pt !important;
+    }
+}
+
 .main-panel {
     position: relative;
     float: right;
